IGNITE-22671 Fix ducktape dns_failure test compilation under JDK11  (#11429)